fix pending img creating x-overflow

--- a/packages/venia-concept/src/components/Image/image.css
+++ b/packages/venia-concept/src/components/Image/image.css
@@ -28,7 +28,7 @@
     composes: image;
     height: 0; /* if not set, paginator will jump off-screen */
     opacity: 0;
-    position: absolute;
+    visibility: hidden;
 }
 
 .imagePlaceholder {
